--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 
   <script>
   // === FWEA-I Omnilingual Clean Version Editor (MVP) ===
-  const DEFAULT_API = 'http://178.156.190.229:8000'; // HTTPS reverse-proxy to Hetzner backend
+  const DEFAULT_API = 'https://clean.fwea-i.com'; // HTTPS reverse-proxy to Hetzner backend (via Caddy)
   const BACKEND_BASE = (location.hostname==='localhost' || location.hostname==='127.0.0.1') ? 'http://localhost:8000' : DEFAULT_API;
   const STRIPE_BUY_LINK = 'https://buy.stripe.com/6oU8wQ3jrdqz3A63zCfbq0e';
 
